--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      <title>Page Title</title>
      <meta charset="utf-8">
    </head>
-   <body> hello world!
+   <body> 
+      <p> hello world! </p>
    </body>
  </html>
