--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-   <head>
-     <title>Page Title</title>
-     <meta charset="utf-8">
-   </head>
-   <body> 
-      <p> hello world! </p>
-   </body>
- </html>
+  <head>
+    <title>Who am I?</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    Jean Valjean
+    55 Rue Plumet
+    Amonate, VA 24601
+  </body>
+</html>
